--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - pipelines/**
 env:
   AWS_REGION: us-east-1
-  SAGEMAKER_PROJECT_NAME: mlops-sagemaker-github
+  SAGEMAKER_PROJECT_NAME: mlops-sagemaker-github1
 
 jobs:
   Build:
